SourceCode/src/lexico.output
Terminals unused in grammar

    ASK
    BEGIN_T
    EACH
    INDEX


State 77 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce, 6 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | stmt_list

    3 stmt_list: stmt
    4          | stmt_list stmt

    5 stmt: decl_stmt ';'
    6     | collection_decl_stmt ';'
    7     | collection_set_stmt ';'
    8     | append_stmt ';'
    9     | sort_stmt ';'
   10     | print_stmt ';'
   11     | set_stmt ';'
   12     | convert_stmt ';'
   13     | emit_stmt ';'
   14     | giveback_stmt ';'
   15     | compound_stmt ';'
   16     | function_stmt
   17     | class_stmt
   18     | file_open_stmt
   19     | file_stmt ';'
   20     | if_stmt
   21     | while_stmt
   22     | for_stmt
   23     | repeat_stmt
   24     | attempt_stmt

   25 file_open_stmt: OPEN expr FILE_T DO block
   26               | OPEN expr FILE_T MAKE DO block

   27 file_stmt: WRITE expr IN FILE_T
   28          | WRITE expr IN LINE expr IN FILE_T
   29          | READ FILE_T INTO IDENT
   30          | READ LINE expr IN FILE_T INTO IDENT
   31          | READ expr LINES IN FILE_T INTO IDENT
   32          | READ expr LINES FROM LINE expr IN FILE_T INTO IDENT
   33          | CLEAR FILE_T
   34          | CLEAR LINE expr IN FILE_T
   35          | CLEAR FROM LINE expr TO LINE expr IN FILE_T
   36          | SET FILE_T TITLE TO expr
   37          | CLOSE FILE_T

   38 collection_decl_stmt: CREATE ARRAY OF type IDENT WITH SIZE expr
   39                     | CREATE TABLE IDENT WITH SIZE expr
   40                     | CREATE type MESH IDENT SIZED expr
   41                     | CREATE type MESH IDENT SET VALUES mesh_init_values
   42                     | CREATE MESH IDENT SIZED expr
   43                     | CREATE MESH IDENT SET VALUES mesh_init_values
   44                     | CREATE type MATRIX MESH IDENT ROWS expr COLS expr
   45                     | CREATE type MATRIX MESH IDENT SET VALUES matrix_init_rows
   46                     | CREATE type MATRIX MESH IDENT SET VALUE matrix_init_rows
   47                     | CREATE MATRIX MESH IDENT ROWS expr COLS expr
   48                     | CREATE MATRIX MESH IDENT SET VALUES matrix_init_rows
   49                     | CREATE MATRIX MESH IDENT SET VALUE matrix_init_rows
   50                     | CREATE type MATRIX IDENT ROWS expr COLS expr

   51 collection_set_stmt: SET IDENT AT expr TO expr
   52                    | SET IDENT VALUE AT expr TO expr
   53                    | SET IDENT AT expr ',' expr TO expr
   54                    | SET IDENT VALUE AT expr ',' expr TO expr
   55                    | SET expr TO IDENT AT expr ',' expr
   56                    | SET expr AT expr ',' expr
   57                    | SET IDENT AT expr TO TAKE USER INPUT opt_message
   58                    | SET IDENT VALUE AT expr TO TAKE USER INPUT opt_message
   59                    | SET VALUE AT expr TO expr
   60                    | SET VALUE TO expr
   61                    | SET VALUE AT expr TO TAKE USER INPUT opt_message
   62                    | SET VALUE TO TAKE USER INPUT opt_message

   63 append_stmt: APPEND append_value TO IDENT
   64            | APPEND append_value TO IDENT AT expr
   65            | APPEND append_value
   66            | APPEND append_value AT expr

   67 sort_stmt: SORT IDENT ASCENDANTLY
   68          | SORT IDENT DESCENDANTLY

   69 append_value: append_value PLUS append_term
   70             | append_value MINUS append_term
   71             | append_term

   72 append_term: append_term TIMES append_factor
   73            | append_term DIV append_factor
   74            | append_term MOD append_factor
   75            | append_factor

   76 append_factor: call_expr
   77              | SIZE OF IDENT
   78              | ROW LENGTH OF IDENT
   79              | COLUMN LENGTH OF IDENT
   80              | LENGTH OF append_factor
   81              | EXTRACT append_value FROM IDENT
   82              | EXTRACT FROM append_value TO append_value IN IDENT
   83              | COUNT append_value IN IDENT
   84              | CHECK append_value IN IDENT
   85              | POSITION OF append_value IN IDENT
   86              | IDENT
   87              | literal
   88              | '(' append_value ')'
   89              | MINUS append_factor
   90              | PLUS append_factor

   91 function_stmt: DEFINE ROUTINE IDENT opt_param_clause RETURNS type DO block

   92 opt_param_clause: ε
   93                 | WITH ARGS IN TAKE param_list

   94 param_list: type IDENT
   95           | param_list ',' type IDENT

   96 emit_stmt: EMIT IDENT opt_call_args

   97 giveback_stmt: GIVEBACK expr

   98 opt_call_args: ε
   99              | WITH ARGS IN TAKE simple_call_args
  100              | WITH ARGS IN TAKE '(' call_args ')'

  101 simple_call_args: call_arg_simple
  102                 | simple_call_args ',' call_arg_simple

  103 call_arg_simple: IDENT
  104                | literal
  105                | call_expr
  106                | '(' expr ')'
  107                | MINUS call_arg_simple
  108                | PLUS call_arg_simple

  109 call_args: expr
  110          | call_args ',' expr

  111 call_expr: OUTCOME OF IDENT opt_call_args

  112 decl_stmt: CREATE IDENT IDENT USING IDENT
  113          | CREATE type IDENT SET VALUE expr
  114          | CREATE type id_list_multi SET VALUE val_list_multi
  115          | CREATE type IDENT
  116          | CREATE type id_list_multi
  117          | CREATE type IDENT SET_VALUE_TAKE_USER_INPUT opt_message

  118 $@1: ε

  119 class_stmt: DEFINE CLASS IDENT INCLUDE $@1 INDENT class_body DEDENT

  120 $@2: ε

  121 class_stmt: DEFINE CLASS IDENT INHERITS IDENT INCLUDE $@2 INDENT class_body DEDENT

  122 class_body: class_member
  123           | class_body class_member

  124 class_member: CREATE type IDENT ';'
  125             | OVERRIDE CREATE type IDENT ';'

  126 $@3: ε

  127 class_member: PROFILE IDENT DO $@3 INDENT profile_body DEDENT
  128             | ROUTINE IDENT opt_param_clause RETURNS type DO block
  129             | ROUTINE IDENT opt_param_clause DO block
  130             | OVERRIDE ROUTINE IDENT opt_param_clause RETURNS type DO block
  131             | OVERRIDE ROUTINE IDENT opt_param_clause DO block

  132 profile_body: profile_line
  133             | profile_body profile_line

  134 profile_line: SET IDENT TO expr ';'
  135             | SET IDENT TO TAKE USER INPUT opt_message ';'

  136 opt_message: ε
  137            | WITH MESSAGE message_parts

  138 message_parts: expr
  139              | message_parts ',' expr

  140 print_stmt: PRINT print_args

  141 if_stmt: IF condition THEN block
  142        | IF condition THEN block else_part

  143 else_part: OTHERWISE block
  144          | OTHERWISE WHEN condition THEN block
  145          | OTHERWISE WHEN condition THEN block else_part

  146 block: INDENT block_body DEDENT

  147 block_body: stmt
  148           | block_body stmt

  149 while_stmt: WHILE condition DO block

  150 for_stmt: FOR IDENT FROM expr TO expr opt_step DO block
  151         | FOR IDENT IN IDENT FROM expr TO expr opt_step DO block
  152         | FOR IDENT IDENT IN IDENT IDENT FROM expr TO expr AND IDENT FROM expr TO expr DO block

  153 opt_step: ε
  154         | STEP expr

  155 repeat_stmt: REPEAT block UNTIL condition THEN

  156 attempt_stmt: ATTEMPT UPTO expr WHILE condition DO block opt_onfailure
  157             | ATTEMPT UPTO expr TIMES_WHILE condition DO block opt_onfailure

  158 opt_onfailure: ε
  159              | ONFAILURE block

  160 condition: cond_or

  161 cond_or: cond_or OR cond_and
  162        | cond_and

  163 cond_and: cond_and AND cond_not
  164         | cond_not

  165 cond_not: NOT cond_atom
  166         | cond_atom

  167 cond_atom: expr CMP_EQ expr
  168          | expr CMP_NEQ expr
  169          | expr CMP_GT expr
  170          | expr CMP_LT expr
  171          | expr CMP_GTE expr
  172          | expr CMP_LTE expr
  173          | '(' condition ')'

  174 type: T_INT
  175     | T_FLOAT
  176     | T_CHAR
  177     | T_STRING
  178     | T_BOOL

  179 id_list_multi: IDENT ',' IDENT
  180              | id_list_multi ',' IDENT

  181 val_list_multi: expr ',' expr
  182               | val_list_multi ',' expr

  183 mesh_init_values: expr
  184                 | mesh_init_values ',' expr

  185 matrix_init_row: expr
  186                | matrix_init_row ',' expr

  187 matrix_init_rows: matrix_init_row
  188                 | matrix_init_rows '/' matrix_init_row

  189 print_args: expr
  190           | print_args ',' expr

  191 compound_stmt: IDENT PLUS expr
  192              | IDENT MINUS expr
  193              | IDENT TIMES expr
  194              | IDENT DIV expr
  195              | IDENT MOD expr

  196 set_stmt: SET IDENT TO expr
  197         | SET IDENT AT expr ',' expr
  198         | SET IDENT TO TAKE USER INPUT opt_message

  199 convert_stmt: CONVERT IDENT TO type

  200 expr: expr PLUS term
  201     | expr MINUS term
  202     | term

  203 term: term TIMES factor
  204     | term DIV factor
  205     | term MOD factor
  206     | factor

  207 factor: call_expr
  208       | CONVERT expr TO type
  209       | IDENT AT factor ',' factor
  210       | SIZE OF IDENT
  211       | ROW LENGTH OF IDENT
  212       | COLUMN LENGTH OF IDENT
  213       | LENGTH OF factor
  214       | EXTRACT expr FROM IDENT
  215       | EXTRACT FROM expr TO expr IN IDENT
  216       | COUNT expr IN IDENT
  217       | CHECK expr IN IDENT
  218       | POSITION OF expr IN IDENT
  219       | IDENT AT factor
  220       | IDENT
  221       | literal
  222       | '(' expr ')'
  223       | MINUS factor
  224       | PLUS factor

  225 literal: INT_LIT
  226        | FLOAT_LIT
  227        | CHAR_LIT
  228        | STRING_LIT
  229        | TRUE
  230        | FALSE


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 88 100 106 173 222
    ')' (41) 88 100 106 173 222
    ',' (44) 53 54 55 56 95 102 110 139 179 180 181 182 184 186 190 197 209
    '/' (47) 188
    ';' (59) 5 6 7 8 9 10 11 12 13 14 15 19 124 125 134 135
    error (256)
    CREATE (258) 38 39 40 41 42 43 44 45 46 47 48 49 50 112 113 114 115 116 117 124 125
    DEFINE (259) 91 119 121
    CLASS (260) 119 121
    INCLUDE (261) 119 121
    INHERITS (262) 121
    PROFILE (263) 127
    USING (264) 112
    ROUTINE (265) 91 128 129 130 131
    OVERRIDE (266) 125 130 131
    RETURNS (267) 91 128 130
    SET (268) 36 41 43 45 46 48 49 51 52 53 54 55 56 57 58 59 60 61 62 113 114 134 135 196 197 198
    VALUE (269) 46 49 52 54 58 59 60 61 62 113 114
    VALUES (270) 41 43 45 48
    CONVERT (271) 199 208
    PRINT (272) 140
    APPEND (273) 63 64 65 66
    SORT (274) 67 68
    ASCENDANTLY (275) 67
    DESCENDANTLY (276) 68
    COUNT (277) 83 216
    CHECK (278) 84 217
    POSITION (279) 85 218
    EXTRACT (280) 81 82 214 215
    TO (281) 35 36 51 52 53 54 55 57 58 59 60 61 62 63 64 82 134 135 150 151 152 196 198 199 208 215
    ASK (282)
    TAKE (283) 57 58 61 62 93 99 100 135 198
    USER (284) 57 58 61 62 135 198
    INPUT (285) 57 58 61 62 135 198
    WITH (286) 38 39 93 99 100 137
    MESSAGE (287) 137
    SET_VALUE_TAKE_USER_INPUT (288) 117
    OPEN (289) 25 26
    MAKE (290) 26
    FILE_T (291) 25 26 27 28 29 30 31 32 33 34 35 36 37
    WRITE (292) 27 28
    READ (293) 29 30 31 32
    LINE (294) 28 30 32 34 35
    LINES (295) 31 32
    CLEAR (296) 33 34 35
    BEGIN_T (297)
    CLOSE (298) 37
    TITLE (299) 36
    INTO (300) 29 30 31 32
    ARRAY (301) 38
    TABLE (302) 39
    MESH (303) 40 41 42 43 44 45 46 47 48 49
    MATRIX (304) 44 45 46 47 48 49 50
    ROWS (305) 44 47 50
    COLS (306) 44 47 50
    SIZE (307) 38 39 77 210
    LENGTH (308) 78 79 80 211 212 213
    SIZED (309) 40 42
    AT (310) 51 52 53 54 55 56 57 58 59 61 64 66 197 209 219
    EACH (311)
    INDEX (312)
    ROW (313) 78 211
    COLUMN (314) 79 212
    EMIT (315) 96
    GIVEBACK (316) 97
    OUTCOME (317) 111
    OF (318) 38 77 78 79 80 85 111 210 211 212 213 218
    ARGS (319) 93 99 100
    IN (320) 27 28 30 31 32 34 35 82 83 84 85 93 99 100 151 152 215 216 217 218
    PLUS (321) 69 90 108 191 200 224
    MINUS (322) 70 89 107 192 201 223
    TIMES (323) 72 193 203
    DIV (324) 73 194 204
    MOD (325) 74 195 205
    IF (326) 141 142
    THEN (327) 141 142 144 145 155
    OTHERWISE (328) 143 144 145
    WHEN (329) 144 145
    AND (330) 152 163
    OR (331) 161
    NOT (332) 165
    CMP_EQ (333) 167
    CMP_NEQ (334) 168
    CMP_GT (335) 169
    CMP_LT (336) 170
    CMP_GTE (337) 171
    CMP_LTE (338) 172
    INDENT (339) 119 121 127 146
    DEDENT (340) 119 121 127 146
    T_INT (341) 174
    T_FLOAT (342) 175
    T_CHAR (343) 176
    T_STRING (344) 177
    T_BOOL (345) 178
    TRUE (346) 229
    FALSE (347) 230
    WHILE (348) 149 156
    DO (349) 25 26 91 127 128 129 130 131 149 150 151 152 156 157
    FOR (350) 150 151 152
    FROM (351) 32 35 81 82 150 151 152 214 215
    STEP (352) 154
    REPEAT (353) 155
    UNTIL (354) 155
    ATTEMPT (355) 156 157
    UPTO (356) 156 157
    ONFAILURE (357) 159
    TIMES_WHILE (358) 157
    INT_LIT <ival> (359) 225
    FLOAT_LIT <dval> (360) 226
    CHAR_LIT <cval> (361) 227
    STRING_LIT <sval> (362) 228
    IDENT <sval> (363) 29 30 31 32 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 57 58 63 64 67 68 77 78 79 81 82 83 84 85 86 91 94 95 96 103 111 112 113 115 117 119 121 124 125 127 128 129 130 131 134 135 150 151 152 179 180 191 192 193 194 195 196 197 198 199 209 210 211 212 214 215 216 217 218 219 220
    PREC_LOWEST (364)


Nonterminals, with rules where they appear

    $accept (115)
        on left: 0
    program <prog> (116)
        on left: 1 2
        on right: 0
    stmt_list <prog> (117)
        on left: 3 4
        on right: 2 4
    stmt <stmt> (118)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 3 4 147 148
    file_open_stmt <stmt> (119)
        on left: 25 26
        on right: 18
    file_stmt <stmt> (120)
        on left: 27 28 29 30 31 32 33 34 35 36 37
        on right: 19
    collection_decl_stmt <stmt> (121)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 6
    collection_set_stmt <stmt> (122)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 7
    append_stmt <stmt> (123)
        on left: 63 64 65 66
        on right: 8
    sort_stmt <stmt> (124)
        on left: 67 68
        on right: 9
    append_value <expr> (125)
        on left: 69 70 71
        on right: 63 64 65 66 69 70 81 82 83 84 85 88
    append_term <expr> (126)
        on left: 72 73 74 75
        on right: 69 70 71 72 73 74
    append_factor <expr> (127)
        on left: 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 72 73 74 75 80 89 90
    function_stmt <stmt> (128)
        on left: 91
        on right: 16
    opt_param_clause <plist> (129)
        on left: 92 93
        on right: 91 128 129 130 131
    param_list <plist> (130)
        on left: 94 95
        on right: 93 95
    emit_stmt <stmt> (131)
        on left: 96
        on right: 13
    giveback_stmt <stmt> (132)
        on left: 97
        on right: 14
    opt_call_args <exprlist> (133)
        on left: 98 99 100
        on right: 96 111
    simple_call_args <exprlist> (134)
        on left: 101 102
        on right: 99 102
    call_arg_simple <expr> (135)
        on left: 103 104 105 106 107 108
        on right: 101 102 107 108
    call_args <exprlist> (136)
        on left: 109 110
        on right: 100 110
    call_expr <expr> (137)
        on left: 111
        on right: 76 105 207
    decl_stmt <stmt> (138)
        on left: 112 113 114 115 116 117
        on right: 5
    class_stmt <stmt> (139)
        on left: 119 121
        on right: 17
    $@1 (140)
        on left: 118
        on right: 119
    $@2 (141)
        on left: 120
        on right: 121
    class_body (142)
        on left: 122 123
        on right: 119 121 123
    class_member (143)
        on left: 124 125 127 128 129 130 131
        on right: 122 123
    $@3 (144)
        on left: 126
        on right: 127
    profile_body (145)
        on left: 132 133
        on right: 127 133
    profile_line (146)
        on left: 134 135
        on right: 132 133
    opt_message <exprlist> (147)
        on left: 136 137
        on right: 57 58 61 62 117 135 198
    message_parts <exprlist> (148)
        on left: 138 139
        on right: 137 139
    print_stmt <stmt> (149)
        on left: 140
        on right: 10
    if_stmt <stmt> (150)
        on left: 141 142
        on right: 20
    else_part <stmt> (151)
        on left: 143 144 145
        on right: 142 145
    block <stmt> (152)
        on left: 146
        on right: 25 26 91 128 129 130 131 141 142 143 144 145 149 150 151 152 155 156 157 159
    block_body <prog> (153)
        on left: 147 148
        on right: 146 148
    while_stmt <stmt> (154)
        on left: 149
        on right: 21
    for_stmt <stmt> (155)
        on left: 150 151 152
        on right: 22
    opt_step <expr> (156)
        on left: 153 154
        on right: 150 151
    repeat_stmt <stmt> (157)
        on left: 155
        on right: 23
    attempt_stmt <stmt> (158)
        on left: 156 157
        on right: 24
    opt_onfailure <stmt> (159)
        on left: 158 159
        on right: 156 157
    condition <condexpr> (160)
        on left: 160
        on right: 141 142 144 145 149 155 156 157 173
    cond_or <condexpr> (161)
        on left: 161 162
        on right: 160 161
    cond_and <condexpr> (162)
        on left: 163 164
        on right: 161 162 163
    cond_not <condexpr> (163)
        on left: 165 166
        on right: 163 164
    cond_atom <condexpr> (164)
        on left: 167 168 169 170 171 172 173
        on right: 165 166
    type <typekind> (165)
        on left: 174 175 176 177 178
        on right: 38 40 41 44 45 46 50 91 94 95 113 114 115 116 117 124 125 128 130 199 208
    id_list_multi <idlist> (166)
        on left: 179 180
        on right: 114 116 180
    val_list_multi <exprlist> (167)
        on left: 181 182
        on right: 114 182
    mesh_init_values <exprlist> (168)
        on left: 183 184
        on right: 41 43 184
    matrix_init_row <minit> (169)
        on left: 185 186
        on right: 186 187 188
    matrix_init_rows <minit> (170)
        on left: 187 188
        on right: 45 46 48 49 188
    print_args <exprlist> (171)
        on left: 189 190
        on right: 140 190
    compound_stmt <stmt> (172)
        on left: 191 192 193 194 195
        on right: 15
    set_stmt <stmt> (173)
        on left: 196 197 198
        on right: 11
    convert_stmt <stmt> (174)
        on left: 199
        on right: 12
    expr <expr> (175)
        on left: 200 201 202
        on right: 25 26 27 28 30 31 32 34 35 36 38 39 40 42 44 47 50 51 52 53 54 55 56 57 58 59 60 61 64 66 97 106 109 110 113 134 138 139 150 151 152 154 156 157 167 168 169 170 171 172 181 182 183 184 185 186 189 190 191 192 193 194 195 196 197 200 201 208 214 215 216 217 218 222
    term <expr> (176)
        on left: 203 204 205 206
        on right: 200 201 202 203 204 205
    factor <expr> (177)
        on left: 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
        on right: 203 204 205 206 209 213 219 223 224
    literal <lit> (178)
        on left: 225 226 227 228 229 230
        on right: 87 104 221


State 0

    0 $accept: • program $end

    CREATE    shift, and go to state 1
    DEFINE    shift, and go to state 2
    SET       shift, and go to state 3
    CONVERT   shift, and go to state 4
    PRINT     shift, and go to state 5
    APPEND    shift, and go to state 6
    SORT      shift, and go to state 7
    OPEN      shift, and go to state 8
    WRITE     shift, and go to state 9
    READ      shift, and go to state 10
    CLEAR     shift, and go to state 11
    CLOSE     shift, and go to state 12
    EMIT      shift, and go to state 13
    GIVEBACK  shift, and go to state 14
    IF        shift, and go to state 15
    WHILE     shift, and go to state 16
    FOR       shift, and go to state 17
    REPEAT    shift, and go to state 18
    ATTEMPT   shift, and go to state 19
    IDENT     shift, and go to state 20

    $default  reduce using rule 1 (program)

    program               go to state 21
    stmt_list             go to state 22
    stmt                  go to state 23
    file_open_stmt        go to state 24
    file_stmt             go to state 25
    collection_decl_stmt  go to state 26
    collection_set_stmt   go to state 27
    append_stmt           go to state 28
    sort_stmt             go to state 29
    function_stmt         go to state 30
    emit_stmt             go to state 31
    giveback_stmt         go to state 32
    decl_stmt             go to state 33
    class_stmt            go to state 34
    print_stmt            go to state 35
    if_stmt               go to state 36
    while_stmt            go to state 37
    for_stmt              go to state 38
    repeat_stmt           go to state 39
    attempt_stmt          go to state 40
    compound_stmt         go to state 41
    set_stmt              go to state 42
    convert_stmt          go to state 43


State 1

   38 collection_decl_stmt: CREATE • ARRAY OF type IDENT WITH SIZE expr
   39                     | CREATE • TABLE IDENT WITH SIZE expr
   40                     | CREATE • type MESH IDENT SIZED expr
   41                     | CREATE • type MESH IDENT SET VALUES mesh_init_values
   42                     | CREATE • MESH IDENT SIZED expr
   43                     | CREATE • MESH IDENT SET VALUES mesh_init_values
   44                     | CREATE • type MATRIX MESH IDENT ROWS expr COLS expr
   45                     | CREATE • type MATRIX MESH IDENT SET VALUES matrix_init_rows
   46                     | CREATE • type MATRIX MESH IDENT SET VALUE matrix_init_rows
   47                     | CREATE • MATRIX MESH IDENT ROWS expr COLS expr
   48                     | CREATE • MATRIX MESH IDENT SET VALUES matrix_init_rows
   49                     | CREATE • MATRIX MESH IDENT SET VALUE matrix_init_rows
   50                     | CREATE • type MATRIX IDENT ROWS expr COLS expr
  112 decl_stmt: CREATE • IDENT IDENT USING IDENT
  113          | CREATE • type IDENT SET VALUE expr
  114          | CREATE • type id_list_multi SET VALUE val_list_multi
  115          | CREATE • type IDENT
  116          | CREATE • type id_list_multi
  117          | CREATE • type IDENT SET_VALUE_TAKE_USER_INPUT opt_message

    ARRAY     shift, and go to state 44
    TABLE     shift, and go to state 45
    MESH      shift, and go to state 46
    MATRIX    shift, and go to state 47
    T_INT     shift, and go to state 48
    T_FLOAT   shift, and go to state 49
    T_CHAR    shift, and go to state 50
    T_STRING  shift, and go to state 51
    T_BOOL    shift, and go to state 52
    IDENT     shift, and go to state 53

    type  go to state 54


State 2

   91 function_stmt: DEFINE • ROUTINE IDENT opt_param_clause RETURNS type DO block
  119 class_stmt: DEFINE • CLASS IDENT INCLUDE $@1 INDENT class_body DEDENT
  121           | DEFINE • CLASS IDENT INHERITS IDENT INCLUDE $@2 INDENT class_body DEDENT

    CLASS    shift, and go to state 55
    ROUTINE  shift, and go to state 56


State 3

   36 file_stmt: SET • FILE_T TITLE TO expr
   51 collection_set_stmt: SET • IDENT AT expr TO expr
   52                    | SET • IDENT VALUE AT expr TO expr
   53                    | SET • IDENT AT expr ',' expr TO expr
   54                    | SET • IDENT VALUE AT expr ',' expr TO expr
   55                    | SET • expr TO IDENT AT expr ',' expr
   56                    | SET • expr AT expr ',' expr
   57                    | SET • IDENT AT expr TO TAKE USER INPUT opt_message
   58                    | SET • IDENT VALUE AT expr TO TAKE USER INPUT opt_message
   59                    | SET • VALUE AT expr TO expr
   60                    | SET • VALUE TO expr
   61                    | SET • VALUE AT expr TO TAKE USER INPUT opt_message
   62                    | SET • VALUE TO TAKE USER INPUT opt_message
  196 set_stmt: SET • IDENT TO expr
  197         | SET • IDENT AT expr ',' expr
  198         | SET • IDENT TO TAKE USER INPUT opt_message

    VALUE       shift, and go to state 57
    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    FILE_T      shift, and go to state 63
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 77
    '('         shift, and go to state 78

    call_expr  go to state 79
    expr       go to state 80
    term       go to state 81
    factor     go to state 82
    literal    go to state 83


State 4

  199 convert_stmt: CONVERT • IDENT TO type

    IDENT  shift, and go to state 84


State 5

  140 print_stmt: PRINT • print_args

    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 85
    '('         shift, and go to state 78

    call_expr   go to state 79
    print_args  go to state 86
    expr        go to state 87
    term        go to state 81
    factor      go to state 82
    literal     go to state 83


State 6

   63 append_stmt: APPEND • append_value TO IDENT
   64            | APPEND • append_value TO IDENT AT expr
   65            | APPEND • append_value
   66            | APPEND • append_value AT expr

    COUNT       shift, and go to state 88
    CHECK       shift, and go to state 89
    POSITION    shift, and go to state 90
    EXTRACT     shift, and go to state 91
    SIZE        shift, and go to state 92
    LENGTH      shift, and go to state 93
    ROW         shift, and go to state 94
    COLUMN      shift, and go to state 95
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 96
    MINUS       shift, and go to state 97
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 98
    '('         shift, and go to state 99

    append_value   go to state 100
    append_term    go to state 101
    append_factor  go to state 102
    call_expr      go to state 103
    literal        go to state 104


State 7

   67 sort_stmt: SORT • IDENT ASCENDANTLY
   68          | SORT • IDENT DESCENDANTLY

    IDENT  shift, and go to state 105


State 8

   25 file_open_stmt: OPEN • expr FILE_T DO block
   26               | OPEN • expr FILE_T MAKE DO block

    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 85
    '('         shift, and go to state 78

    call_expr  go to state 79
    expr       go to state 106
    term       go to state 81
    factor     go to state 82
    literal    go to state 83


State 9

   27 file_stmt: WRITE • expr IN FILE_T
   28          | WRITE • expr IN LINE expr IN FILE_T

    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 85
    '('         shift, and go to state 78

    call_expr  go to state 79
    expr       go to state 107
    term       go to state 81
    factor     go to state 82
    literal    go to state 83


State 10

   29 file_stmt: READ • FILE_T INTO IDENT
   30          | READ • LINE expr IN FILE_T INTO IDENT
   31          | READ • expr LINES IN FILE_T INTO IDENT
   32          | READ • expr LINES FROM LINE expr IN FILE_T INTO IDENT

    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    FILE_T      shift, and go to state 108
    LINE        shift, and go to state 109
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 85
    '('         shift, and go to state 78

    call_expr  go to state 79
    expr       go to state 110
    term       go to state 81
    factor     go to state 82
    literal    go to state 83


State 11

   33 file_stmt: CLEAR • FILE_T
   34          | CLEAR • LINE expr IN FILE_T
   35          | CLEAR • FROM LINE expr TO LINE expr IN FILE_T

    FILE_T  shift, and go to state 111
    LINE    shift, and go to state 112
    FROM    shift, and go to state 113


State 12

   37 file_stmt: CLOSE • FILE_T

    FILE_T  shift, and go to state 114


State 13

   96 emit_stmt: EMIT • IDENT opt_call_args

    IDENT  shift, and go to state 115


State 14

   97 giveback_stmt: GIVEBACK • expr

    CONVERT     shift, and go to state 58
    COUNT       shift, and go to state 59
    CHECK       shift, and go to state 60
    POSITION    shift, and go to state 61
    EXTRACT     shift, and go to state 62
    SIZE        shift, and go to state 64
    LENGTH      shift, and go to state 65
    ROW         shift, and go to state 66
    COLUMN      shift, and go to state 67
    OUTCOME     shift, and go to state 68
    PLUS        shift, and go to state 69
    MINUS       shift, and go to state 70
    TRUE        shift, and go to state 71
    FALSE       shift, and go to state 72
    INT_LIT     shift, and go to state 73
    FLOAT_LIT   shift, and go to state 74
    CHAR_LIT    shift, and go to state 75
    STRING_LIT  shift, and go to state 76
    IDENT       shift, and go to state 85
    '('         shift, and go to state 78

    call_expr  go to state 79
    expr       go to state 116
    term       go to state 81
    factor     go to state 82
    literal    go to state 83


State 15

  141 if_stmt: IF • condition THEN block
  142        | IF • condition THEN block else_part
